IDEA-238738 Suggest `.formatted()` instead of `String.format()` when text blocks are available
GitOrigin-RevId: 6c31021b8f4ec23b7fd42aa1310a510aa3b4efb1