@@ -1,15 +1,18 @@
 // Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.siyeh.ipp.concatenation;
 
+import com.intellij.codeInsight.daemon.impl.analysis.HighlightingFeature;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.*;
 import com.intellij.psi.util.PsiConcatenationUtil;
 import com.intellij.psi.util.PsiLiteralUtil;
+import com.siyeh.IntentionPowerPackBundle;
 import com.siyeh.ig.PsiReplacementUtil;
 import com.siyeh.ig.psiutils.CommentTracker;
 import com.siyeh.ig.psiutils.ExpressionUtils;
-import com.siyeh.ipp.base.Intention;
+import com.siyeh.ipp.base.MutablyNamedIntention;
 import com.siyeh.ipp.base.PsiElementPredicate;
+import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
@@ -17,7 +20,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class ReplaceConcatenationWithFormatStringIntention extends Intention {
+public class ReplaceConcatenationWithFormatStringIntention extends MutablyNamedIntention {
 
   @Override
   @NotNull
@@ -40,14 +43,24 @@ public class ReplaceConcatenationWithFormatStringIntention extends Intention {
     }
     CommentTracker commentTracker = new CommentTracker();
     final StringBuilder newExpression = new StringBuilder();
-    newExpression.append("java.lang.String.format(");
-    appendFormatString(expression, formatString, false, newExpression);
-    for (PsiExpression formatParameter : formatParameters) {
+    if (HighlightingFeature.TEXT_BLOCKS.isAvailable(element)) {
+      appendFormatString(expression, formatString, false, newExpression);
+      newExpression.append(".formatted(");
+    } else {
+      newExpression.append("java.lang.String.format(");
+      appendFormatString(expression, formatString, false, newExpression);
       newExpression.append(", ");
-      newExpression.append(commentTracker.text(formatParameter));
     }
+    newExpression.append(StreamEx.of(formatParameters).map(commentTracker::text).joining(", "));
     newExpression.append(')');
     PsiReplacementUtil.replaceExpression(expression, newExpression.toString(), commentTracker);
+  }
+
+  @Override
+  protected String getTextForElement(PsiElement element) {
+    return IntentionPowerPackBundle.message(HighlightingFeature.TEXT_BLOCKS.isAvailable(element)
+                                            ? "replace.concatenation.with.format.string.intention.name.formatted"
+                                            : "replace.concatenation.with.format.string.intention.name");
   }
 
   private static boolean replaceWithPrintfExpression(PsiPolyadicExpression expression, String formatString,
